--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "release:version": "standard-version",
     "release:push": "git push && git push --tag",
     "release:publish": "npm publish",
-    "release-dry-run": "npm run build-and-test && standard-version --dry-run",
-    "prepare": "husky"
+    "release-dry-run": "npm run build-and-test && standard-version --dry-run"
   },
   "files": [
     "README.md",
@@ -73,13 +72,10 @@
     "@babel/preset-env": "7.25.8",
     "@babel/preset-typescript": "7.25.7",
     "@biomejs/biome": "1.9.4",
-    "@commitlint/cli": "19.5.0",
-    "@commitlint/config-conventional": "19.5.0",
     "@types/node": "22.7.7",
     "benchmark": "2.1.4",
     "cpy-cli": "5.0.0",
     "del-cli": "6.0.0",
-    "husky": "9.1.6",
     "npm-run-all": "4.1.5",
     "rollup": "4.24.0",
     "standard-version": "9.5.0",
